--- a/html/styles.css
+++ b/html/styles.css
@@ -2,6 +2,15 @@ body {
     background-color: skyblue;
 }
 
+#myCanvas {
+    margin-top: 10px;
+    width: 100%;
+    height: 200%;
+    border: 1px solid #000000;
+    border-radius:  10px;
+}
+
+/* ----- Navbar ----- */
 nav {
     font-family: "FreeMono", monospace;
     background-color: #333;
@@ -36,17 +45,16 @@ li h1 {
     display: inline-block;
 }
 
-
-/* Change the link color to #111 (black) on hover */
 li a:hover {
     background-color: #111;
     border-radius:  10px;
 
 }
+/* ------------------ */
 
 #background {
     margin: auto;
     background-color: white;
-    width: 80%;
+    width: 100%;
     border-radius: 10px;
 }
