--- a/html/styles.css
+++ b/html/styles.css
@@ -1,56 +1,15 @@
 body {
     background-color: skyblue;
+    font-family: Cambria;
 }
 
-#myCanvas {
+#canvas {
+    background-color: aliceblue;
     margin-top: 10px;
     width: 100%;
-    height: 200%;
-    border: 1px solid #000000;
+    height: 800px;
     border-radius:  10px;
 }
-
-/* ----- Navbar ----- */
-nav {
-    font-family: "FreeMono", monospace;
-    background-color: #333;
-    border-radius: 10px;
-    padding: 0px;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-li {
-    display: inline;
-}
-
-li a {
-    float: right;
-    color: white;
-    text-align: center;
-    padding: 24px 16px;
-    text-decoration: none;
-    
-    display: inline-block;
-}
-
-li h1 {
-    padding-left: 5px;
-    color: white;
-    font-size: 24px;
-    display: inline-block;
-}
-
-li a:hover {
-    background-color: #111;
-    border-radius:  10px;
-
-}
-/* ------------------ */
 
 #background {
     margin: auto;
@@ -58,3 +17,97 @@ li a:hover {
     width: 100%;
     border-radius: 10px;
 }
+
+input[type=number] {
+    font-size: 20px;
+    color: #FFFFFF;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 5px #999;
+}
+
+.settings {
+    font-size: 20px;
+    color: #FFFFFF;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 5px #999;
+    text-align: center;
+    cursor: pointer;
+    transition-duration: 0.1s;
+}
+
+.settings:hover {
+    background-color: #3E8E41;
+}
+
+.settings:active {
+    background-color: #3e8e41;
+    box-shadow: 0 1px #666;
+    transform: translateY(4px);
+}
+
+/* ----- Navbar ----- */
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+    border-radius: 10px;
+}
+
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: #111;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+/* ------------------ */
