--- a/html/styles.css
+++ b/html/styles.css
@@ -3,6 +3,34 @@ body {
     font-family: Cambria;
 }
 
+#algorithms {
+    float: right;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 20px;
+}
+
+li {
+    padding-left: 10px;
+    line-height: 1.7;
+    text-align: justify;
+    font-size: 24px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+h1 {
+    text-align: center;
+}
+
+p {
+    line-height: 1.7;
+    text-align: justify;
+    font-size: 24px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 #canvas {
     background-color: aliceblue;
     margin-top: 10px;
@@ -14,7 +42,7 @@ body {
 #background {
     margin: auto;
     background-color: white;
-    width: 100%;
+    width: 70%;
     border-radius: 10px;
 }
 
